transform to split-up version of paper

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -6,7 +6,7 @@
 
 
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated. To get at the impact of soccer matches on violent behavior I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources to exploit 4,461 football games over the period from 2011-2015. First, the time and location of all games in the first three leagues are obtained via web-scraping. Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
+The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of soccer games in the framework of the German professional football league system is investigated. To get at the impact of soccer matches on violent behavior, I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
 
 
 
@@ -33,7 +33,7 @@ This paper complements the literature on sport events and their effects on diffe
 	
 	
 % extension literature
-The paper complements previous literature on many dimensions. I assemble a unique data set from various sources in order to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer. In addition to the overall effect, I show heterogeneous effects by victim and crime characteristics. When investigating channels, I find no support for the frustration-aggression hypothesis, but evidence for the social learning theory and a selection story in which violent fans self-select into specific matches.
+The empirical analysis in this paper expands previous literature on many dimensions. I assemble a unique data set from various sources in order to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer. In addition to the overall effect, I show effect heterogeneity by victim and crime characteristics. When investigating channels, I find no support for the frustration-aggression hypothesis, but evidence for the social learning theory and a selection story in which violent fans self-select into specific matches.
 
 
 
@@ -57,7 +57,7 @@ The remainder of the paper is structured as follows. The next section provides i
 
 % German Football League System
 \subsection{German Football League System}
-The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams who play 17 home and away games in the course of one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. The preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' takes into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} In addition to obvious restrictions such as the fact that neighbouring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events (e.g. Oktoberfest) or match dates of international competitions (UEFA Champions League \& UEFA Europa League).
+The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in the course of one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. The preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' takes into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events (e.g. Oktoberfest) or match dates of international competitions (UEFA Champions League \& UEFA Europa League).
 
 
 
@@ -90,7 +90,7 @@ Alcohol plays a crucial role in the context of spectator violence in German foot
 \bigskip
 \section{Empirical strategy}\label{sec_soc_ext:empirical_strategy}
 
-In order to identify the causal effect of soccer matches on criminal behavior, I exploit time series and cross-sectional variation. To be precise, I compare the regional assault rate on the game day to the expected assault level conditional on the day of the week, month, and year while additionally accounting for other possible confounding variation stemming from weather and holidays. In other words, the counterfactual assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the assault rate on other Saturdays in April 2012, where no games take place. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
+In order to identify the causal effect of soccer matches on criminal behavior, I exploit time-series and cross-sectional variation in the crime register data. To be precise, I compare the regional assault rate on the game day to the expected assault level conditional on the day of the week, month, and year while additionally accounting for other possible confounding variation stemming from weather and holidays. In other words, the counterfactual assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the assault rate on other Saturdays in April 2012, where no games take place. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
 
 
 The identification strategy is based on a generalized difference-in-differences approach to study the impact of a soccer match on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. The assault rate is defined as the number of assaults per million population and is given by:
@@ -104,11 +104,11 @@ $\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home games ta
 
 
 % displacement effects - temporal & spatial
-The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior, is that the location and the time of a soccer match is orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighboring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a soccer match on violent behavior as the offense would would have been committed anyway, but just another time or at another place. To rule out the possibility that displacement effects pose a threat to the validity of the identification strategy, I investigate the effect of soccer games on neighboring regions and on days surrounding game days. I find that the main results, an increase in violent behavior due to soccer games, are not neutralized by decreases in adjacent regions or on days surrounding game days.
+The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior is that the location and the time of a soccer match are orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighboring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a soccer match on violent behavior as the offense would have been committed anyway, but just another time or at another place. To rule out the possibility that displacement effects pose a threat to the validity of the identification strategy, I investigate the effect of soccer games on neighboring regions and on days surrounding game days. I find that the main results, an increase in violent behavior in regions where soccer games take place, are not neutralized by decreases in adjacent regions or on days surrounding game days.
 
 
 % control group problem - away games
-Given the setup of the empirical approach, there could be another threat to the validity of the identification strategy. By focusing on home games in the main analysis, the counterfactuals could potentially be biased downwards as days with away games are part of the control group. This control group problem might stem from the fact that violent fan groups travel with their team on away games and the assault rate in the home region might consequently decline. In order to alleviate this concern, I redo the analysis and differentiate between home and away games. When allowing for distinct effects for home and away games, I find that the effect of away games do not significantly affect the assault rate. 
+Given the setup of the empirical approach, there could be another threat to the validity of the identification strategy. By focusing on home games in the main analysis, the counterfactuals could potentially be biased downwards as days with away games are part of the control group. This control group problem might stem from the fact that violent fan groups travel with their team on away games and the assault rate in the home region might consequently decline. In order to alleviate this concern, I redo the analysis and differentiate between home and away games. When allowing for distinct effects for home and away games, I find that away games do not significantly affect the assault rate in the home region. 
 
 
 
@@ -123,7 +123,7 @@ Given the setup of the empirical approach, there could be another threat to the 
 \bigskip
 \section{Data}\label{sec_soc_ext:data} 
 % Description data
-The data set used for the analysis covers the time window 2011-2015 and contains the regions in which soccer games of the first three leagues of the German football league system take place. I combine various data sources in order to examine the impact of public mass gatherings on criminal behavior.
+The data set used for the analysis covers the time window 2011-2015 and contains regions in which professional soccer games take place. The analysis is carried out on the municipality level, the lowest territorial division in Germany. I combine various data sources in order to examine the impact of public mass gatherings on violent behavior.
 
 
 
@@ -193,7 +193,7 @@ Before presenting the regression results, Figure \ref{fig_soc_ext:assault_rate_a
 Table \ref{tab_soc_ext:reg_fe_assrate} reports estimates corresponding to equation \ref{eq_soc_ext:model} when adding progressively more controls. The dependent variable is the assault rate, which is defined as the number of offenses per million population. In column 1, I include region, day-of-week, month, and year fixed effects. Column 2 adds weather controls. Holidays fixed effects are included in column 3. Column 4, controls for region specific date fixed effects. Note that although the estimates vary marginally across columns, I use throughout the paper the model presented in column 4 for subsequent analyses. The estimate from the preferred specification in column 4 suggests that a home game increases the assault rate by an average 2.677 assaults per million population. This corresponds to an increase of 21.5\% from the game-free level.
 
 % victim characteristics
-After establishing that soccer games lead to more assaults, I shed some light on who are the victims of these additional offenses. Table \ref{tab_soc_ext:reg_fe_assrate_victim_chars} shows the effect of soccer games on the assault rate by victim characteristics. First, Column 2 and 3 show the effect heterogeneity by gender. Although the estimates for women and men are statistically significant from zero, the additional victims are almost exclusively male. Male victimization rates increase on average by 2.432 offenses per million population. The increased assault rate for males consume more than 90\% of the effect found on the entire sample. Figure \ref{fig_soc_ext:fe_age_profile} shows the age profile of the effects for each gender separately. For women, the point estimates are small in magnitude and not significantly different from zero. The one exception are women aged 40-49 years. In contrast, the effects of adult men are throughout significant. The largest effect for males is found in the age bracket 18-29 years and is decreasing thereafter. Second, I explore effect heterogeneity by the relationship between victim and suspect. The columns 4 and 5 distinguish the relations from a formal perspective, such as kin or acquaintances. Although both estimates are positive and statistically significant, the majority of additional assaults is coming from victims who haven't had any prior connection to the suspect. The victimization rate of strangers to the suspect rises by on average 1.939 assaults per million population. This implies that almost three out of four extra cases originate from this type of victim-suspect pair. Column 6 considers spatial-social relationships, in this instance whether victim and suspect live in the same household. The assault rate in the domestic context is increasing due to a soccer game by on average 0.096 assaults per million population. This implies that only few (13\%) victims that have known the suspect also live in the same household. Third, the effect of the victim's occupation is investigated. Column 7 shows the impact of soccer games on violent behavior experienced by police officers on duty. The victimization rate of police officers increases on average by 0.434 assaults per million population. Thus, almost 16\% of the additional assaults due to soccer games can be attributed to attacks on police officers. Taken together, the additional victims due to soccer games are young males with no prior relationship to the suspect. This description of the victims has demographic similarities with the population who usually gathers in and around soccer stadiums \citep{pwc2016}.
+After establishing that soccer games lead to more assaults, I shed light on who are the victims of these additional offenses. Table \ref{tab_soc_ext:reg_fe_assrate_victim_chars} shows the effect of soccer games on the assault rate by victim characteristics. First, Columns 2 and 3 show the effect heterogeneity by gender. Although the estimates for women and men are statistically different from zero, the additional victims are almost exclusively male. Male victimization rates increase on average by 2.432 offenses per million population. The increased assault rate for males consumes more than 90 percent of the effect found on the entire sample. Figure \ref{fig_soc_ext:fe_age_profile} shows the age profile of the effects for each gender separately. For women, the point estimates are small in magnitude and not significantly different from zero. The one exception is women aged 40-49 years. In contrast, the effects of adult men are throughout significant. The largest effect for males is found in the age bracket 18-29 years and is decreasing thereafter. Second, I explore effect heterogeneity by the relationship between victim and suspect. The columns 4 and 5 distinguish the relations from a formal perspective, such as kin or acquaintances. Although both estimates are positive and statistically significant, the majority of additional assaults is coming from victims who haven't had any prior connection to the suspect. The victimization rate of strangers to the suspect rises by on average 1.939 assaults per million population. This implies that almost three out of four extra cases originate from this type of victim-suspect pair. Column 6 considers spatial-social relationships, in this instance whether victim and suspect live in the same household. The assault rate in the domestic context is increasing due to a soccer game by on average 0.096 assaults per million population. This implies that only few (13 percent) victims that have known the suspect also live in the same household. Third, the effect of the victim's occupation is investigated. Column 7 shows the impact of soccer games on violent behavior experienced by police officers on duty. The victimization rate of police officers increases on average by 0.434 assaults per million population. Thus, almost 16 percent of the additional assaults due to soccer games can be attributed to attacks on police officers. Taken together, the additional victims due to soccer games are young males with no prior relationship to the suspect. This description of the victims has demographic similarities with the population who usually gathers in and around soccer stadiums \citep{pwc2016}.
 
 % crime characteristics
 In the next step, I consider effect heterogeneity by crime characteristics. Columns 2-5 of Table \ref{tab_soc_ext:reg_fe_assrate_crime_chars} show the heterogeneity of the effect by the time of the offense. The impact of a soccer game on the assault rate is smallest in summer months with 1.482 assaults per million population, corresponding to an increase of 13.4\%. The summer months (July and August) are the time when the soccer season starts and results are not yet so important. The estimates are higher (but not significantly different from each other) during other times of the season. Columns 6 and 7 consider effect heterogeneity by assault execution. I find that the effects of soccer games on the assault rate are mostly driven by 'successfully' committed offenses with by on average 2.310 additional assaults per million population.
