move figures & tables from the end to body of the paper

--- a/TeX/paper/parts/soc_ext_appendix_figures.tex
+++ b/TeX/paper/parts/soc_ext_appendix_figures.tex
@@ -40,6 +40,17 @@
 \end{figure}
 \vspace*{\fill}\clearpage
 %--------------------------------------------
+% MAP: STADIUMS
+\vspace*{\fill}
+\begin{figure}[H]\centering
+	\caption{The stadiums}\label{fig_soc_ext:map_gem_stadiums}
+	\includegraphics[width=0.9\linewidth]{maps/soc_ext_2010_2015_Gemeinde_stadiums_100.png}
+	\begin{minipage}{0.95\linewidth}
+		\scriptsize{\emph{Notes:} This map shows the stadiums used in the analysis over the seasons 2010/11 until 2014/15. The black outlines indicate federal state boundaries.\newline \emph{Source:} Own representation with data from the Federal Institute for Research on Building, Urban Affairs and Spatial Development (BBSR).}
+	\end{minipage}
+\end{figure}
+\vspace*{\fill}\clearpage
+%--------------------------------------------
 % Pregame probability spread
 \vspace*{\fill}
 \begin{figure}[H]\centering
