--- a/TeX/paper/soc_ext_paper_main.tex
+++ b/TeX/paper/soc_ext_paper_main.tex
@@ -243,14 +243,14 @@ labelfont={bf}
 %--------------------------------------------------------------------
 %\newpage
 %\section{Figures and tables}
-\newpage
-\TODO\section{Figures}
-\vspace*{\fill}
-{\Huge \begin{center}\textbf{FIGURES}\end{center}}
-\vspace*{\fill}\clearpage
-%--------------------------------------------
-
-\input{parts/soc_ext_figures}
+%\newpage
+%\TODO\section{Figures}
+%\vspace*{\fill}
+%{\Huge \begin{center}\textbf{FIGURES}\end{center}}
+%\vspace*{\fill}\clearpage
+%%--------------------------------------------
+%
+%\input{parts/soc_ext_figures}
 
 
 
@@ -258,13 +258,13 @@ labelfont={bf}
 %--------------------------------------------------------------------
 % TABLES
 %--------------------------------------------------------------------
-\newpage
-\TODO\section{Tables}
-\vspace*{\fill}
-{\Huge \begin{center}\textbf{TABLES}\end{center}}
-\vspace*{\fill}\clearpage
-
-\input{parts/soc_ext_tables}
+%\newpage
+%\TODO\section{Tables}
+%\vspace*{\fill}
+%{\Huge \begin{center}\textbf{TABLES}\end{center}}
+%\vspace*{\fill}\clearpage
+%
+%\input{parts/soc_ext_tables}
 
 
 
