--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -128,7 +128,10 @@ The data set used for the analysis covers the time window 2011-2015 and contains
 
 
 \subsection{Crime data}
-The crime data is coming from the German Police Crime Statistics, which is provided by the Federal Criminal Police Office.\footnote{Many aspects of the data preparation is inspired from \cite{hener2019noise} who is using the same data in order to examine the causal effect of noise pollution on criminal behavior.} It covers the universe of individuals that fall victim to a crime against their legally protected personal rights between 2011 and 2015. Yet, as the data is only reported after the end of police procedures, the data is truncated to the period from January 2011 to May 2015 to avoid any problems with lags between the occurrence of the crime and when it is reported. Besides, the months of June are excluded from the analysis as no games are played during that time of the year. The data includes next to the time (up to the hour) and place (municipality level) of the crime, the crime type code, the victim's age and gender, characteristics of the assault execution (attempt/successful, usage of firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, this covers formal relationships (such as types of kin or acquaintances). On the other hand, this examines relationships in a spatial-social manner (for instance living in the same household, or being in an education or care context).} Roughly 40\% of the victims are female, their average age is 32 years, and 40\% of the victims haven't had any prior relationship with the suspect.
+The crime data comes from the German Police Crime Statistics, which is provided by the Federal Criminal Police Office.\footnote{Many aspects of the data preparation is inspired from \cite{hener2019noise} who is using the same data in order to examine the causal effect of noise pollution on criminal behavior.} It covers the universe of individuals that fall victim to a crime against their legally protected personal rights between 2011 and 2015. Yet, as the data is only reported after the end of police procedures, the data is truncated to the period from January 2011 to May 2015 to avoid any problems with lags between the occurrence of the crime and when it is reported. Besides, the months of June are excluded from the analysis as no games are played during that time of the year. The data includes next to the time (up to the hour) and place (municipality level) of the crime, the crime type code, the victim's age and gender, characteristics of the assault execution (attempt/successful, usage of firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, this covers formal relationships (such as types of kin or acquaintances). On the other hand, this examines relationships in a spatial-social manner (for instance living in the same household, or being in an education or care context).} Roughly 40\% of the victims are female, their average age is 32 years, and 40\% of the victims haven't had any prior relationship with the suspect.
+
+	% crime - assault distribution over time
+	\input{parts/soc_ext_fig__assault_time_distribution_2014}
 
 The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code of 'intentional simple bodily harm' (Vorsätzliche einfache Körperverletzung § 223 StGB). There are roughly 120 types of criminal offenses in use (recorded in 6 digit codes), though the vast majority of the cases concentrate on only a handful of codes.\footnote{The top 10 of the most prevalent crime keys comprise more than 90\% of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most prevalent offense and it contributes to about 45\% of all cases. The prevalence of the offense type and its association with aggression motivates the decision to have assaults in this definition as the main outcome variable.
 
@@ -139,10 +142,17 @@ Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution o
 
 
 \subsection{Soccer data}
+
+	% MAP : (I) WEATHER monitors & (II) NEIGHBOUR regions
+	\input{parts/soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions}
+
 The data on soccer matches is self-collected and is obtained via web-scraping from kicker.de and transfermarkt.de. It captures all matches that are carried out in the context of the first three leagues of the German football league system over the period January 2011 until May 2015. The data contains detailed match and table standing parameters, e.g. time and place of the match, attendance, pregame point difference, goals, penalties, cards, referee characteristics, among others. Furthermore, there is comprehensive data on the single teams; such as size of the team, average age, market value, and number of foreign players. The stadiums where the matches take place are geographically encoded and will "activate" the treatment in the region in which the stadium is located. Figure \ref{fig_soc_ext:map_gem_stadiums} depicts a map with all 69 stadiums in the data set. 
 
 % XXX stadiums in which not at least a full season is played are excluded from the analysis.\footnote{This affects the stadiums in Lübeck (1), Reutlingen (12), Elversberg (14), and the Air-Berlin stadium in Dusseldorf (3). The number in parenthesis indicates the number of games that were held in that venue. This excludes 0.6\% of all matches.}
 
+	% Descriptives about soccer matches
+	\input{parts/soc_ext_fig__descriptives_matches_time_attendance}
+	
 Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday. This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. The three different divisions can attract spectators differently, as depicted in Panel C. The `Bundesliga' draws the highest attention with an average audience of 44,000 people per game, followed by the second league with an average 17,000 fans per match, and the lowest league can attract on average a bit less than 6,000 fans per game to show up in the stadium.
 
 When investigating channels of how soccer games can affect assaults, I exploit betting odds that were obtained via webscraping from oddsportal.com. The betting odds give an idea about pregame expectations. I translate the odds of the three game outcomes to probabilities, which are the inverse of the betting odds. The probabilities serve as good predictors for game outcomes, as it is shown by Appendix Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}. In panel A, I show the close relationship between the realized score differential and the probability spread. Panel B and C show that the probability of victory is increasing with higher values of the probability spread. 
@@ -186,14 +196,27 @@ The Federal Statistical Office and the statistical offices of the Länder provid
 %--------------------------------------------------------------------
 \subsection{Main results}
 
+	% fig: intuitive representation: assrate across DOW
+	\input{parts/soc_ext_fig__assault_rate_across_dows}
+
 % descriptive figure, ass_rate across DOW
 Before presenting the regression results, Figure \ref{fig_soc_ext:assault_rate_across_dows} gives an intuitive preview of the main findings. Using the same data as the main analysis, it shows the assault rate across days of the week.\footnote{Appendix Figure \ref{fig_soc_ext:assaults_across_dows} shows the same scheme when using the raw number of assaults across days of the week for days with and without games.} The daily rates are presented for days with and without home games. The average daily assault rate is higher for weeks in which there is a home game compared to when no game takes place. The difference in means is statistically significant for all days except for Tuesdays and Wednesdays.\footnote{The average assault rate on Thursdays with games is very high in relation to Thursdays without games. This may be the result of very few games taking place on a Thursday. In the dataset, only 18 (0.4\%) games take place on a Thursday.} The empirical model exploits the variation in assaults across days of the week, and particularly how the pattern varies between weeks with and without games.
 
 % main result table with more controls
 Table \ref{tab_soc_ext:reg_fe_assrate} reports estimates corresponding to equation \ref{eq_soc_ext:model} when adding progressively more controls. The dependent variable is the assault rate, which is defined as the number of offenses per million population. In column 1, I include region, day-of-week, month, and year fixed effects. Column 2 adds weather controls. Holidays fixed effects are included in column 3. Column 4, controls for region specific date fixed effects. Note that although the estimates vary marginally across columns, I use throughout the paper the model presented in column 4 for subsequent analyses. The estimate from the preferred specification in column 4 suggests that a home game increases the assault rate by an average 2.677 assaults per million population. This corresponds to an increase of 21.5\% from the game-free level.
 
+	% main regression table: include fixed effects
+	\input{parts/soc_ext_tab__reg_fe_assrate}
+	
+	
+	% table effect heterogeneity: victim and crime chars
+	\input{parts/soc_ext_tab__reg_fe_asrate_victim_crime_chars}
+
 % victim characteristics
-After establishing that soccer games lead to more assaults, I shed light on who are the victims of these additional offenses. Table \ref{tab_soc_ext:reg_fe_assrate_victim_chars} shows the effect of soccer games on the assault rate by victim characteristics. First, Columns 2 and 3 show the effect heterogeneity by gender. Although the estimates for women and men are statistically different from zero, the additional victims are almost exclusively male. Male victimization rates increase on average by 2.432 offenses per million population. The increased assault rate for males consumes more than 90 percent of the effect found on the entire sample. Figure \ref{fig_soc_ext:fe_age_profile} shows the age profile of the effects for each gender separately. For women, the point estimates are small in magnitude and not significantly different from zero. The one exception is women aged 40-49 years. In contrast, the effects of adult men are throughout significant. The largest effect for males is found in the age bracket 18-29 years and is decreasing thereafter. Second, I explore effect heterogeneity by the relationship between victim and suspect. The columns 4 and 5 distinguish the relations from a formal perspective, such as kin or acquaintances. Although both estimates are positive and statistically significant, the majority of additional assaults is coming from victims who haven't had any prior connection to the suspect. The victimization rate of strangers to the suspect rises by on average 1.939 assaults per million population. This implies that almost three out of four extra cases originate from this type of victim-suspect pair. Column 6 considers spatial-social relationships, in this instance whether victim and suspect live in the same household. The assault rate in the domestic context is increasing due to a soccer game by on average 0.096 assaults per million population. This implies that only few (13 percent) victims that have known the suspect also live in the same household. Third, the effect of the victim's occupation is investigated. Column 7 shows the impact of soccer games on violent behavior experienced by police officers on duty. The victimization rate of police officers increases on average by 0.434 assaults per million population. Thus, almost 16 percent of the additional assaults due to soccer games can be attributed to attacks on police officers. Taken together, the additional victims due to soccer games are young males with no prior relationship to the suspect. This description of the victims has demographic similarities with the population who usually gathers in and around soccer stadiums \citep{pwc2016}.
+After establishing that soccer games lead to more assaults, I shed light on who are the victims of these additional offenses. Table \ref{tab_soc_ext:reg_fe_assrate_victim_chars} shows the effect of soccer games on the assault rate by victim characteristics. First, Columns 2 and 3 show the effect heterogeneity by gender. Although the estimates for women and men are statistically different from zero, the large majority of the additional victims are male. Male victimization rates increase on average by 2.432 offenses per million population. The increased assault rate for males consumes more than 90 percent of the effect found on the entire sample. Figure \ref{fig_soc_ext:fe_age_profile} shows the age profile of the effects for each gender separately. For women, the point estimates are small in magnitude and not significantly different from zero. The one exception is women aged 40-49 years. In contrast, the effects of adult men are throughout significant. The largest effect for males is found in the age bracket 18-29 years and is decreasing thereafter. Second, I explore effect heterogeneity by the relationship between victim and suspect. The columns 4 and 5 distinguish the relations from a formal perspective, such as kin or acquaintances. Although both estimates are positive and statistically significant, the majority of additional assaults is coming from victims who haven't had any prior connection to the suspect. The victimization rate of strangers to the suspect rises by on average 1.939 assaults per million population. This implies that almost three out of four extra cases originate from this type of victim-suspect pair. Column 6 considers spatial-social relationships, in this instance whether victim and suspect live in the same household. The assault rate in the domestic context is increasing due to a soccer game by on average 0.096 assaults per million population. This implies that only few (13 percent) victims that have known the suspect also live in the same household. Third, the effect of the victim's occupation is investigated. Column 7 shows the impact of soccer games on violent behavior experienced by police officers on duty. The victimization rate of police officers increases on average by 0.434 assaults per million population. Thus, almost 16 percent of the additional assaults due to soccer games can be attributed to attacks on police officers. Taken together, the additional victims due to soccer games are young males with no prior relationship to the suspect. This description of the victims has demographic similarities with the population who usually gathers in and around soccer stadiums \citep{pwc2016}.
+
+	% age profile of effect, ba gender
+	\input{parts/soc_ext_fig__fe_age_profile}
 
 % crime characteristics
 In the next step, I consider effect heterogeneity by crime characteristics. Columns 2-5 of Table \ref{tab_soc_ext:reg_fe_assrate_crime_chars} show the heterogeneity of the effect by the time of the offense. The impact of a soccer game on the assault rate is smallest in summer months with 1.482 assaults per million population, corresponding to an increase of 13.4\%. The summer months (July and August) are the time when the soccer season starts and results are not yet so important. The estimates are higher (but not significantly different from each other) during other times of the season. Columns 6 and 7 consider effect heterogeneity by assault execution. I find that the effects of soccer games on the assault rate are mostly driven by 'successfully' committed offenses with by on average 2.310 additional assaults per million population.
@@ -209,6 +232,9 @@ In the next step, I consider effect heterogeneity by crime characteristics. Colu
 % Intro why we see displacement
 Previously, I showed evidence that soccer games increase the assault rate. However, it could very well be that I only pick up an effect that displaces offenses. For example, it is possible that the increase in violent behavior is offset by a reduction in assaults in other areas or at different times \citep{lindo2018college}. In other words, the assault would have been committed anyway, but just at a different time or at another location. One potential explanation for that are different population flows around days on which games take place.
 
+	% table  SPATIAL & TEMPORAL DISPLACEMENT 
+	\input{parts/soc_ext_tab__reg_fe_assrate_displacement}
+
 % spatial displacement
 In order to estimate \textit{spatial displacement effects}, I investigate the impact of soccer matches on nearby regions. I define neighboring regions to constitute nearby regions. A neighbor region is a municipality that shares a common boundary with a region that contains a stadium.\footnote{If there are two municipalities that share a common border and each of the regions contains a stadium, both regions will not serve as neighbor regions and they are dismissed from the set of spatial spillover candidates.} Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions} shows a map of the selected regions. The sample of neighboring regions exhibits a considerably higher number of observations. This is owed to the fact that a region with a stadium has, on average, a bit more than 11 neighbor municipalities. Panel A of Table \ref{tab_soc_ext:reg_fe_assrate_displacement} shows the estimates of the impact of a home game on these neighboring regions. In comparison to the baseline effects, the coefficients of spillover effects across space are small and not significantly different from zero. Consequently, the results do not suggest that offsetting spatial spillover effects are present.
 
@@ -220,7 +246,8 @@ In the next step, \textit{temporal displacement effects} are being considered. T
 % Home and Away games
 As discussed above, the baseline model considers the effect of soccer matches, but for home games only. This restriction could entail serious problems for the validity of the design. When away matches are not accounted for, they end up in the control group. The control observations might be biased downwards when the local team is playing away and the most devoted (and eventually violent) fans travel with their team out of the municipality. This could mean that the assault rate at home is decreasing due to the absence of local agitators and days with away matches cannot be used as control units anymore. In order to address this concern, I investigate the \textit{effect of home and away matches separately}. To analyze the effect of away matches I have to build up my data set differently. In the baseline version, the soccer data is merged to the other data on the match level (with the home team's region ID as identifier). In contrast, in this case I use the soccer data on the table standings level. In other words, both the home and away team are matched to a region. One consequence of this approach is that it makes the treatment status of single regions less clear.\footnote{When only considering home games, the treatment status is not a problem. This is due to the fact that local authorities do not allow two home games on the same day.} For instance, the treatment status of regions that have more than one team is ambiguous when there is a home and an away match at the same day. In order to alleviate this concern, I drop the third league from the sample and focus only on the first two leagues.\footnote{There remain still a few ambiguities but they are solved in the following way: in 12\% of the matches there is still a doubling of two teams of one region play on the same day, either home and away game, or two away games. The status of the region on that day in the latter case is set to away. In the former case, I put it to home game.} This approach helps to clarify the treatment status of a region considerably. Table \ref{tab_soc_ext:reg_fe_assrate_home_away} shows the results when investigating home and away matches separately. To be able to compare the estimated effects, column 1 shows estimates retrieved from the baseline model (home matches only) when adjusting the sample as it is described above. Column 2 presents the estimates when allowing home and away games to have an impact on the assault rate. The estimate of an away game is small in magnitude and not significantly different from zero. In contrast, the effect of a home game is sizable and leads to an average increase in the assault rate by 2.910 assaults per million population. The coefficient is not significantly different from the one in column one. Overall, the results suggest that the focus on home games only does not lead to an invalid identification scheme, which would have been represented by a negative and significant estimate of the away game effect. 
 
-
+	% table  HOME & AWAY games 
+	\input{parts/soc_ext_tab__reg_fe_assrate_home_away}
 
 
 % Channels
@@ -232,11 +259,16 @@ This section investigates potential mechanisms through which football games can 
 % emotional cues
 In the first step, I consider emotional cues as potential channels of how soccer games can affect assault rates. This is motivated by the findings of \cite{card2011family} who demonstrate that unexpected losses of local football teams spur family violence. The results fit well into the context of the frustration-aggression hypothesis, first proposed by \cite{dollard1939frustration}, which predicts belligerent behavior in the event of frustrating events. \cite{rees2009college} show in a similar fashion that there are more violent offenses when the local football team loses. For this reason, I analyze in Table \ref{tab_soc_ext:reg_fe_assrate_emotional_cues} whether visceral factors may be the reason for the additional assaults. Column 1 investigates whether the mere existence of an emotionally upsetting event during a game leads to a higher assault rate. To answer this question, I build an index that equals one for games in which there occurs at least one of the following potentially unsettling events: a penalty is awarded (20\% of all games), a red card is being issued (10\% of all games), or the referee receives a non-sufficient grade (15\% of all games). The index shows that 35\% of all games experience at least one upsetting episode as defined in the previous categories. The estimates in column 1 do not suggest that emotional cues trigger more violent behavior as the estimates for games with and without upsetting events are not significantly different from each other. 	In the second and third column I show estimates following the approach of \cite{card2011family}, in which I examine the impact of game outcomes relative to their pregame expectations. Pregame expectations are included in the analysis as matches with contrasting predictions may be very different from each other. By including predicted outcomes, you can estimate the effect when a team is expected to win but loses, and vice versa. Using data from oddsportal.com, I define a game too close to be predictable when the absolute probability difference between win and loss is smaller than 20 percent.\footnote{Similar results are obtained when defining other threshold values and when I deviate from the symmetry around the origin.} When the spread's value is exceeding the threshold then the home game is expected to win or lose, respectively. Around 45\% of the games are expected to be close or to be won, while 10\% of the games are expected to be lost. The significantly larger share of wins may be attributed to the home-advantage. Column 2 starts out by examining the effects of matches with distinct predicted match outcomes. The estimates do not suggest that the effect of games with different predicted outcomes differ systematically from each other. In column 3, I include additionally interactions between expected and true game outcomes. The estimates are relatively small in magnitude and not significantly different from zero, implying that unexpected wins/losses do not cause additional assaults. Taken all together, there is no evidence that emotional cues drive violent behavior in the context of professional soccer games in Germany.
 
-
+	% table EMOTIONAL CUES
+	\input{parts/soc_ext_tab__reg_fe_assrate_emotional_cues}
+	
 
 % game/team prominence (rivals & league)
 Second, I use information about game and team prominence as potential channels. For many sport fans, the affection for the own soccer team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of feelings of dislike, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for rival matches.\footnote{Appendix Table \ref{tab_soc_ext:prominent_games_derbies} gives an overview of rival matches.} The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as rival matches lead to an average increase of 8.320 assaults per million population. This corresponds to more than three times the baseline effect. Although the standard errors are relatively large, as only 2.5\% of the games are classified as rival matches, the effect is significantly different from regular matches. The higher rate of physical assaults during rival matches could also be rationalized by the social learning theory, in which spectators mimic the behavior displayed on the pitch. For instance, the number of cards awarded is significantly higher in rival matches.\footnote{The number of cards in derby matches is 4.324\ (s.e.=0.174), while for regular matches the number of issued cards is 3.906 (s.e.=0.029).} Next to the explanation of mutual dislike of opposing fan groups or social learning, it could be the mere prominence of teams/games that attract more (violent) people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the Bundesliga, in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league are significantly larger than the effect of matches from the other two leagues.
 Summing up, there is evidence that the prominence of games are a crucial determinant for the size of the effect of soccer matches on the assault rate, where rival matches and games in the top league lead to more assaults.
+
+	% table TEAM/GAME prominence
+	\input{parts/soc_ext_tab__reg_fe_assrate_prominent_games}
 
 
 % Machine Learning application: effect heterogeneity in other dimensions
@@ -256,6 +288,9 @@ sample split: larger effects rural (2x basline), ue rate no effect
 %--------------------------------------------------------------------
 \subsection{Robustness tests}
 I perform several sensitivity and placebo tests to assess the robustness of the findings. The results of these checks are reported in Table \ref{tab_soc_ext:reg_fe_assrate_robustness}. Overall, the sensitivity tests demonstrate that the main results are robust to alternative specifications and estimations, indicating that soccer games lead to more assaults.\newline
+
+	% table Robustness: ECONOMETRICS & other VIOLENCE
+	\input{parts/soc_ext_tab__reg_fe_assrate_robustness}
 
 
 % Alternative econometrics: sample, weights, estimation
@@ -277,8 +312,8 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 
 
 
-
-
+	% fig: PLACEBO GAMES
+	\input{parts/soc_ext_fig__robustness_placebo_games}
 
 
 
